created login and signup page front-end files

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Presume</title>
     <!-- css framework here -->
+    <script src="https://kit.fontawesome.com/314044026f.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/flatly/bootstrap.min.css"/> -->
   </head>
   <body>
