--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Presume</title>
+    <title>Grocer-ease</title>
     <!-- css framework here -->
     <script src="https://kit.fontawesome.com/314044026f.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/flatly/bootstrap.min.css"/> -->
